# skorch

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.md  CITATION  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  VERSION  deploy.sh  docker-compose.yml  environment-deploy.yml  environment.yml  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test-hf-integration.yml  testing.yml
docs/: Makefile  README.md  callbacks.rst  classifier.rst  conf.py  dataset.rst  exceptions.rst  helper.rst  hf.rst  history.rst  index.rst  llm.rst  net.rst  neuralnetclassifier.rst  neuralnetregressor.rst  probabilistic.rst  regressor.rst  requirements.txt  scoring.rst  skorch.rst  toy.rst  utils.rst
docs/_static/css/: my_theme.css
docs/_templates/: layout.html
docs/sphinxext/: github_link.py
docs/user/: FAQ.rst  LLM.rst  REST.rst  callbacks.rst  customization.rst  dataset.rst  helper.rst  history.rst  huggingface.rst  installation.rst  learningratescheduler.rst  neuralnet.rst  parallelism.rst  performance.rst  probabilistic.rst  quickstart.rst  save_load.rst  toy.rst  tutorials.rst
examples/MNIST/: MNIST.ipynb
examples/accelerate-multigpu/: README.md  run-no-skorch.py  run-save-load.py  run-with-skorch.py
examples/benchmarks/: freezing.py  history.py  mnist.py
examples/cli/: README.md  train.py
examples/image-classifier-finetuning/: README.md  train.py
examples/imdb_lstm/: RNN_sentiment_classification.ipynb
examples/nuclei_image_segmentation/: Nuclei_Image_Segmentation.ipynb  README.md  dataset.py  dl_extract_prepare.sh  model.py  prepare_dataset.py  requirements.txt  train_valid_split.json  utils.py
examples/optuna/: README.md  requirements.txt  skorch_example.py
examples/rnn_classifer/: RNN_sentiment_classification.ipynb  dask-config.py  model.py  palladium-config.py
examples/translation/: Dockerfile  data.py  docker-compose.yml  translation.ipynb
examples/word_language_model/: README.md  data.py  generate.py  learner.py  model.py  net.py  predict.py  train.py  train_clean.py  trainer.py
inferno/: __init__.py  callbacks.py  dataset.py  exceptions.py  history.py  net.py  utils.py
inferno/tests/: conftest.py  test_callbacks.py  test_dataset.py  test_history.py  test_net.py  test_utils.py
notebooks/: Advanced_Usage.ipynb  Basic_Usage.ipynb  CORA-geometric.ipynb  Gaussian_Processes.ipynb  Hugging_Face_Finetuning.ipynb  Hugging_Face_Model_Checkpoint.ipynb  Hugging_Face_VisionTranformer.ipynb  Huggingface_Finetuning.ipynb  LLM_Classifier.ipynb  Learning_Rate_Scheduler.ipynb  MNIST-torchvision.ipynb  MNIST.ipynb  Multiple_time-series_RNN.ipynb  README.md  Skorch_Doctor.ipynb  Streaming_Dataset.ipynb  Transfer_Learning.ipynb  Transfer_learning.ipynb  dcgan.ipynb  llm-classifier-demo.ipynb  optuna-example.ipynb  proposal_datasets.ipynb  skorch_dataloader.ipynb  skorch_doctor.ipynb  torchtext_bert.ipynb  triplet_loss.ipynb  visdom.ipynb
notebooks/runs/Jan03_15-37-54_DESKTOP-RM8OEEP/: events.out.tfevents.1672760274.DESKTOP-RM8OEEP.13952.0
notebooks/runs/Jan03_15-48-16_DESKTOP-RM8OEEP/: events.out.tfevents.1672760896.DESKTOP-RM8OEEP.13952.1
notebooks/runs/Jan03_16-01-50_DESKTOP-RM8OEEP/: events.out.tfevents.1672761710.DESKTOP-RM8OEEP.13952.2
scripts/: deploy.sh  hf-integration-tests.py  requirements-deploy.txt
skorch/: __init__.py  _doctor.py  _version.py  callbacks.py  classifier.py  cli.py  dataset.py  exceptions.py  helper.py  hf.py  history.py  lr_scheduler.py  net.py  probabilistic.py  regressor.py  scoring.py  setter.py  toy.py  utils.py
skorch/callbacks/: __init__.py  base.py  logging.py  lr_scheduler.py  metrics.py  regularization.py  scoring.py  training.py
skorch/llm/: __init__.py  classifier.py  prompts.py
skorch/tests/: conftest.py  model_0.5.0.pkl  net_cuda.pkl  net_cuda.pt  optimizer_cuda.pt  test_callbacks.py  test_classifier.py  test_cli.py  test_dataset.py  test_doctor.py  test_helper.py  test_hf.py  test_history.py  test_lr_scheduler.py  test_net.py  test_probabilistic.py  test_regressor.py  test_scoring.py  test_setter.py  test_toy.py  test_utils.py
skorch/tests/callbacks/: test_all.py  test_base.py  test_early_stopping.py  test_logging.py  test_lr_scheduler.py  test_printlog.py  test_progressbar.py  test_regularization.py  test_scoring.py  test_training.py
skorch/tests/llm/: test_llm_classifier.py
